hacking out a solution

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   </head>
 
   <body>
+    <script src="http://d3js.org/topojson.v1.min.js"></script>
     <script src="build.js"></script>
     <script>
 
