--- a/resources/html/reagent.html
+++ b/resources/html/reagent.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Reagent Tutorial</title>
-    <link rel="stylesheet" href="css/base.css" />
-  </head>
-  <body>
-    <div id="content"></div>
-    <script src="main.js"></script>
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <title>Reagent Tutorial</title>
+        <link rel="stylesheet" href="css/base.css" />
+    </head>
+    <body>
+        <div id="content">
+            <div id="app">
+            </div>
+        </div>
+        <script src="main.js"></script>
+    </body>
 </html>
