letter in out working
using re-com...well, loading it anyway.  no widgets are yet harmed.

the letter thing works. a little wierdness in thepositions of the
letters

now to make a map widget

--- a/resources/html/reagent.html
+++ b/resources/html/reagent.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>Reagent Tutorial</title>
+        <link rel="stylesheet" href="css/bootstrap.css">
+        <link rel="stylesheet" href="css/material-design-iconic-font.min.css">
+        <link rel="stylesheet" href="css/re-com.css">
         <link rel="stylesheet" href="css/base.css" />
     </head>
     <body>
