working on plotting a map in clojure

--- a/resources/html/reagent.html
+++ b/resources/html/reagent.html
@@ -14,5 +14,8 @@
             </div>
         </div>
         <script src="main.js"></script>
+        <script>
+            calvad.map.letters.main('CA_grid_topology4326.json');
+        </script>
     </body>
 </html>
